--- a/app/src/main/res/layout/meeting_recyclerview_item.xml
+++ b/app/src/main/res/layout/meeting_recyclerview_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    android:id="@+id/meeting_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -21,7 +21,7 @@
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/meeting_information"
+        android:id="@+id/meeting_information_TV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/participant_list"
+        android:id="@+id/participant_TV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/item_delete_btn"
         app:layout_constraintStart_toEndOf="@+id/color_code"
-        app:layout_constraintTop_toBottomOf="@+id/meeting_information" />
+        app:layout_constraintTop_toBottomOf="@+id/meeting_information_TV" />
 
     <ImageView
         android:id="@+id/item_delete_btn"
