--- a/app/src/main/res/layout/add_reunion_dialog.xml
+++ b/app/src/main/res/layout/add_reunion_dialog.xml
@@ -11,42 +11,75 @@
         android:id="@+id/meeting_subject_ET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Sujet de la réunion"
+        android:hint="@string/hint_sujet"
+        android:inputType="text"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <ImageButton
+        android:id="@+id/choose_time_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#CE0A24"
+        android:contentDescription="button for setting time"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meeting_subject_ET"
+        app:srcCompat="@drawable/ic_access_time_white_24dp" />
+
+    <TextView
         android:id="@+id/meeting_hour_ET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:hint="Heure de la réunion"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:hint="@string/hint_hour"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/choose_time_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meeting_subject_ET" />
+        app:layout_constraintStart_toEndOf="@+id/choose_time_btn"
+        app:layout_constraintTop_toTopOf="@+id/choose_time_btn" />
 
     <EditText
         android:id="@+id/meeting_place_ET"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_width="0dp"
-        android:hint="Lieu de la réunion"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:hint="@string/hint_place"
+        android:inputType="text"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meeting_hour_ET" />
+        app:layout_constraintTop_toBottomOf="@+id/choose_time_btn" />
 
     <EditText
         android:id="@+id/meeting_participants_ET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:hint="Liste des participants"
         android:ems="10"
+        android:fallbackLineSpacing="false"
+        android:hint="@string/hint_participants"
+        android:inputType="textEmailAddress"
+        android:maxLines="1"
+        android:singleLine="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meeting_place_ET" />
 
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/hint_participants_tv"
+        android:textSize="12dp"
+        android:textColor="#0B5461"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meeting_participants_ET" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
