--- a/app/src/main/res/layout/add_reunion_dialog.xml
+++ b/app/src/main/res/layout/add_reunion_dialog.xml
@@ -25,17 +25,20 @@
         android:layout_marginTop="8dp"
         android:background="#CE0A24"
         android:contentDescription="button for setting time"
-        android:padding="5dp"
+        android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/meeting_subject_ET"
         app:srcCompat="@drawable/ic_access_time_white_24dp" />
 
+
     <TextView
-        android:id="@+id/meeting_hour_ET"
+        android:id="@+id/meeting_hour_TV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#00945F5F"
+        android:contentDescription="btn for  choosing date"
         android:hint="@string/hint_hour"
         android:singleLine="true"
         android:textSize="18sp"
@@ -43,6 +46,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/choose_time_btn"
         app:layout_constraintTop_toTopOf="@+id/choose_time_btn" />
+
+    <ImageButton
+        android:id="@+id/choose_date_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#CE0A24"
+        android:padding="10dp"
+        android:src="@drawable/ic_date_range_white_24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choose_time_btn" />
+
+    <TextView
+        android:id="@+id/meeting_date_TV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:hint="Indiquez la date de la réunion"
+        android:singleLine="true"
+        android:textSize="18sp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/choose_date_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/choose_date_btn"
+        app:layout_constraintTop_toTopOf="@+id/choose_date_btn" />
 
     <EditText
         android:id="@+id/meeting_place_ET"
@@ -54,7 +83,7 @@
         android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/choose_time_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/choose_date_btn" />
 
     <EditText
         android:id="@+id/meeting_participants_ET"
