search function in service + instrumented test added

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,10 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <item
-        android:id="@+id/item_action_search"
-        android:title="Filtre par date ou par lieu"
+        android:id="@+id/action_search"
+        android:title="@string/filtre_date_ou_lieu"
         android:icon="@drawable/ic_filter_list_white_24dp"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
